--- a/assets/pages/servicios.html
+++ b/assets/pages/servicios.html
@@ -9,12 +9,13 @@
     <link rel="stylesheet" type="text/css" href="../styles/estilos.css" media="screen">
     <title>Gestadata - Servicios</title>
 </head>
-<body>
-    <header>
+<body class="grid-contenedor">
+    <header class="grid-header">
         <!--Logo Empresarial-->
         <img class="logo" src="../images/GESTADATA_LOGOS-01.png" alt="Logo Gestadata">
     </header>
-    <nav>
+
+    <nav class="grid-nav">
         <!--Menu de Navegación-->
         <ul class="menu_lineal">
             <li class="menu"><a href="../../index.html">INICIO</a></li>
@@ -25,32 +26,32 @@
         </ul>
     </nav>
 
-    <main>
+    <main class="grid-main">
         <!--Seccion Servicios-->
         <h1 class="titulo">SERVICIOS</h1>
         <img class="linea" src="../images/linea_azul.png" alt="separador">
-        <section>
-            <article class="servicios_uno"> 
+        <section class="grid-section">
+            <article class="servicios-uno"> 
                 <h3 class="subtitulo">Analitica de Datos</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo delectus blanditiis alias, quaerat ipsum, quod aperiam corrupti dolorem nam voluptatibus, totam impedit rerum expedita eligendi dolor amet sit! Odit, est? Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
             </article>
-            <article class="servicios_dos">
-                <img src="../images/data_analytics_3.png" alt="nosotros" width="298" height="224">
+            <article class="servicios-dos">
+                <img class="img-servicios-uno" src="../images/data_analytics_3.png" alt="nosotros">
             </article>
         </section>
 
-        <section>
-            <article class="servicios_dos">
-                <img src="../images/dashboard_3.png" alt="nosotros" width="305" height="162">
+        <section class="grid-section">
+            <article class="servicios-tres">
+                <img class="img-servicios-dos" src="../images/dashboard_3.png" alt="nosotros" width="305" height="162">
             </article>
-            <article class="servicios_uno">
+            <article class="servicios-cuatro">
                 <h3 class="subtitulo">Visualización de Datos</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo delectus blanditiis alias, quaerat ipsum, quod aperiam corrupti dolorem nam voluptatibus, totam impedit rerum expedita eligendi dolor amet sit! Odit, est? Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
             </article>
         </section>
 
         <!--Seccion Redes Sociales-->
-        <section>
+        <section class="grid-redes">
             <div class="redes">
                 <a href="https://twitter.com/gestadata"><img src="../images/logo_twitter.png" alt="twitter" width="40" height="40"></a>
                 <a href="https://www.instagram.com/gestadata/"><img src="../images/logo_instagram.png" alt="instagram" width="40" height="40"></a> 
@@ -59,7 +60,7 @@
         </section>
     </main>
 
-    <footer>
+    <footer class="pie-pagina">
         <p>Gestadata Copyright &copy 2022</p>
     </footer>
     
