--- a/assets/pages/tecnologias.html
+++ b/assets/pages/tecnologias.html
@@ -9,12 +9,12 @@
     <link rel="stylesheet" type="text/css" href="../styles/estilos.css" media="screen">
     <title>Gestadata - Tecnologías</title>
 </head>
-<body>
-    <header>
+<body class="grid-contenedor">
+    <header class="grid-header">
         <!--Logo Empresarial-->
         <img class="logo" src="../images/GESTADATA_LOGOS-01.png" alt="Logo Gestadata">
     </header>
-    <nav>
+    <nav class="grid-nav">
         <!--Menu de Navegación-->
         <ul class="menu_lineal">
             <li class="menu"><a href="../../index.html">INICIO</a></li>
@@ -25,32 +25,32 @@
         </ul>
     </nav>
 
-    <main>
+    <main class="grid-main">
         <!--Seccion Tecnologias-->
         <h1 class="titulo">TECNOLOGIAS</h1>
         <img class="linea" src="../images/linea_azul.png" alt="separador">
-        <section>
-            <article class="tecnologias_uno">
-                <img src="../images/powerbi_logo.png" alt="nosotros" width="200" height="150">
+        <section class="grid-section-tec">
+            <article class="tecnologias-uno">
+                <img class="img-tecnologias-uno" src="../images/powerbi_logo.png" alt="Power BI">
             </article>
-            <article class="tecnologias_uno">
-                <img src="../images/tableau_logo.png" alt="nosotros" width="180" height="180">
-            </article>
-        </section>
 
-        <section>
-            <article class="tecnologias_texto_uno">
-                <h3 class="subtitulo">Power BI</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo delectus blanditiis alias, quaerat ipsum, quod aperiam corrupti dolorem nam voluptatibus, totam impedit rerum expedita eligendi dolor amet sit! Odit, est? Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <article class="tecnologias-dos">
+                <img class="img-tecnologias-dos" src="../images/tableau_logo.png" alt="Tableau">
             </article>
-            <article class="tecnologias_texto_dos">
+
+            <article class="tecnologias-tres">
+                <h3 class="subtitulo">Power BI</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo delectus blanditiis alias, quaerat ipsum, quod aperiam corrupti dolorem nam voluptatibus, totam impedit rerum expedita eligendi dolor amet sit! Odit, est? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+            </article>
+
+            <article class="tecnologias-cuatro">
                 <h3 class="subtitulo">Tableau</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo delectus blanditiis alias, quaerat ipsum, quod aperiam corrupti dolorem nam voluptatibus, totam impedit rerum expedita eligendi dolor amet sit! Odit, est? Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo delectus blanditiis alias, quaerat ipsum, quod aperiam corrupti dolorem nam voluptatibus, totam impedit rerum expedita eligendi dolor amet sit! Odit, est? Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
             </article>
         </section>
 
         <!--Seccion Redes Sociales-->
-        <section>
+        <section class="grid-redes">
             <div class="redes">
                 <a href="https://twitter.com/gestadata"><img src="../images/logo_twitter.png" alt="twitter" width="40" height="40"></a>
                 <a href="https://www.instagram.com/gestadata/"><img src="../images/logo_instagram.png" alt="instagram" width="40" height="40"></a> 
@@ -59,7 +59,7 @@
         </section>
     </main>
 
-    <footer>
+    <footer class="pie-pagina">
         <p>Gestadata Copyright &copy 2022</p>
     </footer>
     
