--- a/assets/pages/nosotros.html
+++ b/assets/pages/nosotros.html
@@ -29,32 +29,32 @@
 
     <main class="grid-main">
         <!--Seccion Nosotros-->
-        <h1 class="titulo">NOSOTROS</h1>
+        <h1 class="titulo titulo-inicio-animado">NOSOTROS</h1>
         <img class="linea" src="../images/linea_azul.png" alt="separador">
         <section class="grid-section">
             <article class="nosotros-uno">
-                <img class="img-nosotros-uno"  src="../images/businessman_4_1.png" alt="nosotros">
+                <img class="img-nosotros-uno izq-der-nos"  src="../images/businessman_4_1.png" alt="nosotros">
             </article>
-            <article class="nosotros-dos">
+            <article class="nosotros-dos der-izq-nos">
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo delectus blanditiis alias, quaerat ipsum, quod aperiam corrupti dolorem nam voluptatibus, totam impedit rerum expedita eligendi dolor amet sit! Odit, est? Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam eum neque ratione nemo tempora pariatur. Nulla eveniet, laborum maxime adipisci, praesentium, vitae nam accusantium voluptate voluptatum assumenda quos esse neque!</p>
             </article>
         </section>
 
         <section class="grid-section">
-            <article class="nosotros-tres">
+            <article class="nosotros-tres izq-der-nos">
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo delectus blanditiis alias, quaerat ipsum, quod aperiam corrupti dolorem nam voluptatibus, totam impedit rerum expedita eligendi dolor amet sit! Odit, est? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi, atque odit veniam unde libero temporibus, impedit hic error illum officia aliquam rerum explicabo autem architecto non maxime amet nemo eaque!</p>
             </article>
             <article class="nosotros-cuatro">
-                <img class="img-nosotros-dos" src="../images/businessman_6_1.png" alt="nosotros">
+                <img class="img-nosotros-dos der-izq-nos" src="../images/businessman_6_1.png" alt="nosotros">
             </article>
         </section>
 
         <!--Seccion Redes Sociales-->
         <section class="grid-redes">
             <div class="redes">
-                <a href="https://twitter.com/gestadata"><img src="../images/logo_twitter.png" alt="twitter" width="40" height="40"></a>
-                <a href="https://www.instagram.com/gestadata/"><img src="../images/logo_instagram.png" alt="instagram" width="40" height="40"></a> 
-                <a href="https://www.linkedin.com/"><img src="../images/logo_linkedin.png" alt="linkedin" width="40" height="40"></a>
+                <a href="https://twitter.com/gestadata"><img class="trans-redesloc" src="../images/logo_twitter.png" alt="twitter" width="40" height="40"></a>
+                <a href="https://www.instagram.com/gestadata/"><img class="trans-redesloc"src="../images/logo_instagram.png" alt="instagram" width="40" height="40"></a> 
+                <a href="https://www.linkedin.com/"><img class="trans-redesloc"src="../images/logo_linkedin.png" alt="linkedin" width="40" height="40"></a>
             </div>
         </section>
     </main>
