agregado js para menu toggle

--- a/assets/pages/nosotros.html
+++ b/assets/pages/nosotros.html
@@ -8,16 +8,7 @@
     <link rel="shortcut icon" href="../images/gestadata_icon.png">
     <!--Estilos-->
     <link rel="stylesheet" type="text/css" href="../styles/estilos.css" media="screen">
-    <script type="text/javascript">
-
-        document.addEventListener("DOMContentLoaded", function(){
-	    // add padding top to show content behind navbar
-    	    navbar_height = document.querySelector('.navbar').offsetHeight;
-	        document.body.style.paddingTop = navbar_height + 'px';
-        }); 
-        // DOMContentLoaded  end
-    </script>
-
+    
     <title >Gestadata - Nosotros</title>
 </head>
 <body>
@@ -95,5 +86,8 @@
         </div>
     </footer>
     
+    <script src="../bootstrap/js/bootstrap.js"></script>
+    <script src="../js/javascript.js"></script>
+
 </body>
 </html>
