--- a/index.html
+++ b/index.html
@@ -8,16 +8,7 @@
     <link rel="shortcut icon" href="./assets/images/gestadata_icon.png">
     <!--Estilos-->
     <link rel="stylesheet" type="text/css" href="./assets/styles/estilos.css" media="screen">
-    <script type="text/javascript">
-
-        document.addEventListener("DOMContentLoaded", function(){
-	    // add padding top to show content behind navbar
-    	    navbar_height = document.querySelector('.navbar').offsetHeight;
-	        document.body.style.paddingTop = navbar_height + 'px';
-        }); 
-        // DOMContentLoaded  end
-    </script>
-
+    
     <title>Gestadata</title>
 </head>
 <body>
@@ -154,6 +145,10 @@
             </div>
         </div>
     </footer>
-    
+
+    <script src="./assets/bootstrap/js/bootstrap.js"></script>
+    <script src="./assets/js/javascript.js"></script>
+
 </body>
+
 </html>
