--- a/assets/pages/contacto.html
+++ b/assets/pages/contacto.html
@@ -123,5 +123,8 @@
         </div>
     </footer>
     
+    <script src="../bootstrap/js/bootstrap.js"></script>
+    <script src="../js/javascript.js"></script>
+
 </body>
 </html>
