--- a/assets/pages/contacto.html
+++ b/assets/pages/contacto.html
@@ -4,20 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--SEO-->
+    <meta name="keywords" content="Data, Datos, Analytics, Power, BI, Tableau, Tablero, Analitica, Visualization">
+    <!--Description--> 
+    <meta name="description" content="Contacto, permite hacer un contacto para solicitar mayor información de nuestros servicios, por medio de un correo.">
+
     <link rel="stylesheet" type="text/css" href="../bootstrap/css/bootstrap.css">
     <link rel="shortcut icon" href="../images/gestadata_icon.png">
     <!--Estilos-->
-    <link rel="stylesheet" type="text/css" href="../styles/estilos.css" media="screen">
-    <script type="text/javascript">
-
-        document.addEventListener("DOMContentLoaded", function(){
-	    // add padding top to show content behind navbar
-    	    navbar_height = document.querySelector('.navbar').offsetHeight;
-	        document.body.style.paddingTop = navbar_height + 'px';
-        }); 
-        // DOMContentLoaded  end
-    </script>
-
+    <!--<link rel="stylesheet" type="text/css" href="../styles/estilos.css" media="screen">-->
+    <link rel="stylesheet" type="text/css" href="../css/destino.css" media="screen">
+    
     <title>Gestadata - Contacto</title>
 </head>
 <body>
