--- a/assets/pages/nosotros.html
+++ b/assets/pages/nosotros.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--SEO-->
+    <meta name="keywords" content="Data, Datos, Analytics, Power, BI, Tableau, Tablero, Analitica, Visualization">
+    <!--Description-->
+    <meta name="description" content="Nosotros, identifica quienes es el proveedor del servicio, nuestro desempeño en la prestación del servicio y que valores llevamos a cabo para el cliente.">
+
     <link rel="stylesheet" type="text/css" href="../bootstrap/css/bootstrap.css">
     <link rel="shortcut icon" href="../images/gestadata_icon.png">
     <!--Estilos-->
-    <link rel="stylesheet" type="text/css" href="../styles/estilos.css" media="screen">
+    <!--<link rel="stylesheet" type="text/css" href="../styles/estilos.css" media="screen">-->
+    <link rel="stylesheet" type="text/css" href="../css/destino.css" media="screen">
     
     <title >Gestadata - Nosotros</title>
 </head>
@@ -49,7 +55,7 @@
                 </article>
 
                 <article class="col-xs-6 col-md-4 text-center der-izq-nos">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo delectus blanditiis alias, quaerat ipsum, quod aperiam corrupti dolorem nam voluptatibus, totam impedit rerum expedita eligendi dolor amet sit! Odit, est? Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam eum neque ratione nemo tempora pariatur. Nulla eveniet, laborum maxime adipisci, praesentium, vitae nam accusantium voluptate voluptatum assumenda quos esse neque!</p>
+                    <p>Nuestro propósito de democratizar la información para que las personas puedan crear mejores soluciones. Tenemos una cultura abierta e inclusiva que está atravesada por la colaboración y el aprendizaje continuo.</p>
                 </article>
             </div>
         </section>
@@ -57,7 +63,7 @@
         <section class="container-fluid">
             <div class="row justify-content-center">
                 <article class="col-xs-6 col-md-4 text-center izq-der-nos">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo delectus blanditiis alias, quaerat ipsum, quod aperiam corrupti dolorem nam voluptatibus, totam impedit rerum expedita eligendi dolor amet sit! Odit, est? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi, atque odit veniam unde libero temporibus, impedit hic error illum officia aliquam rerum explicabo autem architecto non maxime amet nemo eaque!</p>
+                    <p>Nuestra misión es implementar soluciones personalizadas para ayudar a las organizaciones a tomar mejores decisiones a partir del uso intensivo de datos y con el uso de las herramientas liederes del mercado.</p>
                 </article>
 
                 <article class="col-xs-6 col-md-4 text-center izq-der-nos">
