--- a/assets/pages/tecnologias.html
+++ b/assets/pages/tecnologias.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--SEO-->
+    <meta name="keywords" content="Data, Datos, Analytics, Power, BI, Tableau, Tablero, Analitica, Visualization">
+    <!--Description-->
+    <meta name="description" content="Tecnologías, describe las tecnologías que usa la empresa para devolver el producto final al cliente. Las herramientas que usa nuestra empresa son Power BI y Tableau." >
+
     <link rel="stylesheet" type="text/css" href="../bootstrap/css/bootstrap.css">
     <link rel="shortcut icon" href="../images/gestadata_icon.png">
     <!--Estilos-->
-    <link rel="stylesheet" type="text/css" href="../styles/estilos.css" media="screen">
-    
+    <!--<link rel="stylesheet" type="text/css" href="../styles/estilos.css" media="screen">-->
+    <link rel="stylesheet" type="text/css" href="../css/destino.css" media="screen">
+
     <title>Gestadata - Tecnologías</title>
 </head>
 <body>
@@ -47,13 +53,13 @@
                 <article class="col-xs-6 col-md-4 text-center izq-der-nos">
                     <img class="img-tecnologias-uno" src="../images/powerbi_logo.png" alt="Power BI">
                     <h3 class="subtitulo">Power BI</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo delectus blanditiis alias, quaerat ipsum, quod aperiam corrupti dolorem nam voluptatibus, totam impedit rerum expedita eligendi dolor amet sit! Odit, est? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                    <p>solución de análisis empresarial basado en la nube, que permite unir diferentes fuentes de datos, analizarlos y presentar un análisis de estos a través de informes y paneles. Con Power BI se tiene de manera fácil acceso a datos dentro y fuera de la organización casi en cualquier dispositivo.</p>
                 </article>
 
                 <article class="col-xs-6 col-md-4 text-center der-izq-nos">
                     <img class="img-tecnologias-dos" src="../images/tableau_logo.png" alt="Tableau">
                     <h3 class="subtitulo">Tableau</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo delectus blanditiis alias, quaerat ipsum, quod aperiam corrupti dolorem nam voluptatibus, totam impedit rerum expedita eligendi dolor amet sit! Odit, est? Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                    <p>es la opción de inteligencia de negocios moderna líder en el mercado. Hace que sea más fácil explorar y administrar los datos. Asimismo, permite descubrir y compartir información más rápidamente a fin de generar grandes cambios en los negocios y en el mundo.</p>
                 </article>
             </div>
         </section>
