--- a/index.html
+++ b/index.html
@@ -4,14 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--SEO-->
+    <meta name="keywords" content="Data, Datos, Analytics, Power, BI, Tableau, Tablero, Analitica, Visualization">
+    <!--Description-->
+    <meta name="description" content="Inicio, describe brevemente el tipo de servicio que presta, las casas tecnológicas que usa y como contactarnos." >
+
     <link rel="stylesheet" type="text/css" href="./assets/bootstrap/css/bootstrap.css">
     <link rel="shortcut icon" href="./assets/images/gestadata_icon.png">
     <!--Estilos-->
     <!--<link rel="stylesheet" type="text/css" href="./assets/styles/estilos.css" media="screen">-->
     <link rel="stylesheet" type="text/css" href="./assets/css/destino.css" media="screen">
 
-    <title>Gestadata</title>
-</head>
+    <title>Gestadata - Inicio</title>
+</head> 
 <body>
     <header class="container-fluid fixed-top">
         <!--Logo Empresarial-->
@@ -42,7 +47,7 @@
                 <article class="col-xs-6 col-md-5 text-center">
                     <h3>Midiendo estas Gestionando</h3>
                     <h4>Transforma tu empresa tomando mejores desiciones</h4>
-                    <p>ipsum dolor sit, amet consectetur adipisicing elit. Explicabo delectus blanditiis alias, quaerat ipsum, quod aperiam corrupti dolorem nam voluptatibus, totam impedit rerum expedita eligendi dolor amet sit! Odit, est?</p>
+                    <p>Trabajamos en la depuración e integración de la información que producen y la que puedan obtener de fuentes externas hacia la construcción de Modelos de Datos Inteligentes y su publicación en Paneles de Informes e Indicadores de Gestión.</p>
                 </article>
                 <article class="col-xs-6 col-md-3 text-center">
                     <img class="img-inicio-uno trans-img-inicio" src="./assets/images/businessman_1.png" alt="bienvenida">
@@ -62,7 +67,8 @@
                     <img src="./assets/images/business_man_woman.png" alt="nosotros" width="135" height="225">
                 </article>
                 <article class="col-xs-6 col-md-4 text-center inicio-nos-text trans-texto-incio">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo delectus blanditiis alias, quaerat ipsum, quod aperiam corrupti dolorem nam voluptatibus, totam impedit rerum expedita eligendi dolor amet sit! Odit, est?</p>
+                    <p>Nos dedicamos  a entender la necesidad final de los usuarios en su problemática de gestión de negocios para construir las mejores herramientas de solución. 
+                        Este proceso implica estudiar a fondo cada emprendimiento para el cual prestamos nuestros servicios, sus procesos, sus recursos, sus sistemas, sus debilidades, sus expectativas de crecimiento.</p>
                 </article>
             </div>
         </section>
@@ -76,8 +82,10 @@
                     <img class="linea" src="./assets/images/linea_azul.png" alt="separador">
                 </div>
                 <article class="col-xs-6 col-md-4 text-center inicio-serv-text trans-texto-incio">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo delectus blanditiis alias, quaerat ipsum, quod aperiam corrupti dolorem nam voluptatibus</p>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo delectus blanditiis alias, quaerat ipsum, quod aperiam corrupti dolorem nam voluptatibus</p>
+                    <p>El Análisis de Datos acelera la capacidad de respuesta para poder tomar decisiones inteligentes en tu empresa. Convierte tus datos, en oportunidades.</p>
+                    <p>La Visualización de Datos ayuda a las empresas a presentar los datos de manera eficiente para poder comunicar y compartir información o ideas complejas de forma clara, precisa y concreta.
+
+                    </p>
                 </article>
                 <article class="col-xs-6 col-md-4 text-center trans-img-inicio">
                     <img class="img-inicio-serv" src="./assets/images/businessman_3.png" alt="servicios">
@@ -96,13 +104,13 @@
                 <article class="col-xs-6 col-md-4 text-center inicio-tec trans-img-inicio">
                     <img class="img-inicio-tec-microsoft" src="./assets/images/microsoft_logo.png" alt="Microsoft">
                     <h3 class="subtitulo">Microsoft</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo delectus blanditiis alias, quaerat ipsum, quod aperiam corrupti dolorem nam voluptatibus, totam impedit rerum expedita eligendi dolor amet sit! Odit, est?</p>
+                    <p>Empresa de Tecnologia propietaria de Power BI, que hace parte de lo que Microsoft llamó su Power Platform. Tambien, es parte de una gran cantidad de productos de BI creados por la misma.</p>
                 </article>
             
                 <article class="col-xs-6 col-md-4 text-center trans-img-inicio">
                     <img class="img-inicio-tec-salesforce" src="./assets/images/salesforce_logo.png" alt="Salesforce">
                     <h3 class="subtitulo">Salesforce</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo delectus blanditiis alias, quaerat ipsum, quod aperiam corrupti dolorem nam voluptatibus, totam impedit rerum expedita eligendi dolor amet sit! Odit, est?</p>
+                    <p>ayudamos a las personas a ver y comprender los datos. Como parte de la familia Salesforce , ofrecemos la solución de análisis líder en el mundo para todos sus datos.</p>
                 </article>
             </div>
         </section>
