--- a/assets/pages/tecnologias.html
+++ b/assets/pages/tecnologias.html
@@ -24,8 +24,8 @@
     </header>
 
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark">
-        <div class="container-fluid">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main_nav">
+        <div class="container-fluid togg-menu">
+                <button class="navbar-toggler togg" type="button" data-bs-toggle="collapse" data-bs-target="#main_nav">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="main_nav">
