--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <!--Seccion Bienvenida-->
         <section class="container-fluid">
             <div class="row justify-content-center">
-                <article class="col-xs-6 col-md-5 text-center">
+                <article class="col-xs-6 col-md-4 text-center">
                     <h3>Midiendo estas Gestionando</h3>
                     <h4>Transforma tu empresa tomando mejores desiciones</h4>
                     <p>Trabajamos en la depuración e integración de la información que producen y la que puedan obtener de fuentes externas hacia la construcción de Modelos de Datos Inteligentes y su publicación en Paneles de Informes e Indicadores de Gestión.</p>
@@ -129,7 +129,7 @@
                 </article>
             
                 <article class="col-xs-6 col-md-4 text-center inicio-cont-text trans-texto-incio">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo delectus blanditiis alias, quaerat ipsum, quod aperiam corrupti dolorem nam voluptatibus.</p>
+                    <p>Nos da gusto saber de ti, si tienes alguna pregunta, duda o curiosidad, puedes ir a la sección Contacto sin ningún compromiso!</p>
                 </article>
             </div>
         </section>
