--- a/assets/pages/servicios.html
+++ b/assets/pages/servicios.html
@@ -24,11 +24,11 @@
     </header>
 
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark">
-        <div class="container-fluid">
+        <div class="container-fluid togg-menu">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main_nav">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="main_nav">
+                <div class="collapse navbar-collapse togg" id="main_nav">
                     <ul class="navbar-nav ms-auto text-center">
                         <li class="nav-item menu"><a href="../../index.html">INICIO</a></li>
                         <li class="nav-item menu"><a href="../pages/nosotros.html">NOSOTROS</a></li>
